; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_rng.c_crypto_init_rng_ops.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_rng.c_crypto_init_rng_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { %struct.rng_tfm, %struct.TYPE_2__* }
%struct.rng_tfm = type { i32, i32 }
%struct.TYPE_2__ = type { %struct.rng_alg }
%struct.rng_alg = type { i32 }

@rngapi_reset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crypto_tfm*, i32, i32)* @crypto_init_rng_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crypto_init_rng_ops(%struct.crypto_tfm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.crypto_tfm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.rng_alg*, align 8
  %8 = alloca %struct.rng_tfm*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %10 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store %struct.rng_alg* %12, %struct.rng_alg** %7, align 8
  %13 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %14 = getelementptr inbounds %struct.crypto_tfm, %struct.crypto_tfm* %13, i32 0, i32 0
  store %struct.rng_tfm* %14, %struct.rng_tfm** %8, align 8
  %15 = load %struct.rng_alg*, %struct.rng_alg** %7, align 8
  %16 = getelementptr inbounds %struct.rng_alg, %struct.rng_alg* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.rng_tfm*, %struct.rng_tfm** %8, align 8
  %19 = getelementptr inbounds %struct.rng_tfm, %struct.rng_tfm* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @rngapi_reset, align 4
  %21 = load %struct.rng_tfm*, %struct.rng_tfm** %8, align 8
  %22 = getelementptr inbounds %struct.rng_tfm, %struct.rng_tfm* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
